# second-brain-openenv-rl

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  start.sh
server/: Dockerfile  __init__.py  app.py  data.py  requirements.txt  second_brain_env_environment.py
